Merge branch 'master' into aggregate - tests ok
Conflicts:
	src/main/scala/com/ayasdi/bigdf/Column.scala
	src/main/scala/com/ayasdi/bigdf/DF.scala
	src/test/scala/com/ayasdi/bigdf/DFTest.scala